css/style-VERSIONED.css
/* ... */
/**************/
/* INTERVIEWS */
/**************/

/***************************************************/
/*	New style interviews
	(e.g. https://gwern.net/lorem-block#interviews )
 */

/*	Interview.
 */
ul.interview {
	--list-left-padding: 1.5em;
}

/*	Exchanges.
 */
ul.interview li.exchange ul {
	--list-left-padding: 1.75em;
}
ul.interview li.exchange::before {
	left: 0;
}

/*	Utterances.
 */
ul.interview li.utterance {
	text-indent: calc(-1 * var(--list-left-padding));
}
ul.interview li.utterance::before {
	display: none;
}

/*	Speakers.
 */
ul.interview .speaker {
	font-variant-caps: small-caps;
	letter-spacing: -0.25px;
	display: inline-block;
	min-width: calc(var(--list-left-padding) - 1ch);
	margin-right: 1ch;
}

/*****************************************************/
/*  Legacy styles for un-converted interviews
	(e.g. https://gwern.net/Morning-writing#examples )

	NOTE: Remove this once interviews are all converted. —SA 2023-06-07
 */

blockquote p > code:first-child,
blockquote p > a:first-child code:first-child {
    border: none;
    background-color: transparent;
    font-weight: bold;
    font-family: inherit;
    padding: 0;
    font-size: inherit;
}


/*************/
/* ABSTRACTS */
/*************/
/*	Abstract for page or section.
 */

.abstract blockquote {
    border-color: var(--GW-abstract-border-color);
}

/*  Auto-smallcaps introductory paragraphs of documents or sub-documents.
	(This is also where drop caps appear.)
 */
p.intro-graf::first-line {
	font-variant-caps: small-caps;
}


/*************/
/* EPIGRAPHS */
/*************/
/*	Loosely inspired by https://edwardtufte.github.io/tufte-css/#epigraphs
 */

.epigraph {
    display: flow-root;
    margin: auto;
    padding: 0.75em 2.5em;
}

.epigraph blockquote {
    --background-color: inherit;

    padding: 0;
    border: none;
    position: relative;
    z-index: 1;
    width: fit-content;
    margin: auto;
}
.epigraph blockquote p  {
    font-size: inherit;
    font-style: italic;
    background-color: inherit;
}

/*  Reverse back to normal when italics are used inside an epigraph, or final block.
 */
.epigraph blockquote p:first-child em {
    font-style: normal;
    margin: 0 0 0 0.125em;
}
.epigraph blockquote p:last-child:not(:only-child) {
    margin: 0.5em 0 0 0;
    text-align: right;
    font-size: 0.875em;
    font-style: normal;
}

.epigraph blockquote blockquote p,
.epigraph blockquote blockquote p:last-child {
    text-align: var(--text-alignment);
}

.epigraph > blockquote::before,
.epigraph > blockquote::after {
    display: block;
    position: absolute;
    font-size: 2.5em;
    color: var(--GW-epigraph-quotation-mark-color);
}
.epigraph > blockquote::before {
    content: "\201C";
    left: -1em;
    top: -0.56em;
}
.epigraph > blockquote::after {
    content: "\201D";
    right: -1em;
    bottom: -1.12em;
}

@media all and (max-width: 649px) {
    .epigraph {
        padding: 1.5em 0.75em;
        font-size: 0.95em;
    }
    .epigraph > blockquote::before {
        left: -0.3em;
        top: -0.9em;
    }
    .epigraph > blockquote::after {
        right: -0.3em;
        bottom: -1.4em;
    }
}


/***************/
/* ADMONITIONS */
/***************/
/*	Highlighted boxes: ‘admonitions’ are small break-out boxes with notes, tips,
	warnings, etc. for the reader.

	These are particularly useful in didactic technical writing, where there are
	many ways to slip up while using or coding something.

	Available (in increasing order of minatoriness): 
	‘tip’, ‘note’, ‘warning’, ‘error’.

	Based on Markdeep's implementation: 
	https://casual-effects.com/markdeep/features.md.html#basicformatting/admonitions 
	(which appears loosely inspired by Wikipedia's notification templates like 
	`{{NPOV}}`) and modified to grayscale (increasing intensity == increasing 
	warning) for Gwern.net.

	Usage examples:

	- <div class="admonition tip"><div class="admonition-title">Tip title (optional)</div> text</div>
	- <div class="admonition note"><div class="admonition-title">Note title (*)</div> text</div>
	- <div class="admonition warning"><div class="admonition-title">Warning title (*)</div> text</div>
	- <div class="admonition error"><div class="admonition-title">Error title (*)</div> text</div>
 */
.admonition {
	display: flow-root;
    font-family: var(--GW-sans-serif-font-stack);
    font-size: 0.875em;
    position: relative;
    padding: 0.75em 1.25em 0.875em 1.125em;
    border-left: 2.875em solid var(--admonition-left-border-color);
    background-color: var(--background-color);
}

.admonition.note {
    --background-color: var(--GW-admonition-note-background-color);
    --admonition-left-border-color: var(--GW-admonition-note-left-border-color);
}
.admonition.tip {
    --background-color: var(--GW-admonition-tip-background-color);
    --admonition-left-border-color: var(--GW-admonition-tip-left-border-color);
}
.admonition.warning {
    --background-color: var(--GW-admonition-warning-background-color);
    --admonition-left-border-color: var(--GW-admonition-warning-left-border-color);

    color: var(--GW-admonition-warning-text-color);
}
.admonition.error {
    --background-color: var(--GW-admonition-error-background-color);
    --admonition-left-border-color: var(--GW-admonition-error-left-border-color);

    color: var(--GW-admonition-error-text-color);
}

.admonition-title {
    margin-bottom: 0.25em;
    font-weight: bold;
}

.admonition::before {
    content: "";
    width: 2.875em;
    height: 100%;
    position: absolute;
    top: 0.125em;
    right: 100%;
    padding: 0.60em;
    box-sizing: border-box;
    background-origin: content-box;
    background-clip: content-box;
}

.admonition.tip::before {
    background-image: url('/static/img/icon/icons.svg?v=1686208295#info-circle-regular');
}
.admonition.note::before {
    background-image: url('/static/img/icon/icons.svg?v=1686208295#hand-point-right-regular');
    filter: invert(1);
}
/* ... */

