Fix list layout bug

--- a/css/style-VERSIONED.css
+++ b/css/style-VERSIONED.css
@@ -2479,18 +2479,18 @@ p.intro-graf::first-line {
 }
 
 .admonition.tip::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686208295#info-circle-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1686217768#info-circle-regular');
 }
 .admonition.note::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686208295#hand-point-right-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1686217768#hand-point-right-regular');
     filter: invert(1);
 }
 .admonition.warning::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686208295#triangle-exclamation-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1686217768#triangle-exclamation-regular');
     filter: invert(1);
 }
 .admonition.error::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686208295#skull-crossbones-solid');
+    background-image: url('/static/img/icon/icons.svg?v=1686217768#skull-crossbones-solid');
     padding: 0.75em;
     top: 0;
     filter: invert(1);
@@ -5414,14 +5414,14 @@ body.lorem div[class^='drop-cap'] {
 /*  Loading spinner (for object popups).
  */
 .popup.loading::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686208295#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1686217768#circle-notch-light');
     animation: fa-spin 2s infinite linear;
 }
 
 /*  Rendering spinner.
  */
 .popup.rendering::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686208295#spinner-third-light');
+    background-image: url('/static/img/icon/icons.svg?v=1686217768#spinner-third-light');
     animation: fa-spin 3s infinite linear;
 }
 
@@ -5554,7 +5554,7 @@ body.lorem div[class^='drop-cap'] {
     */
 .popup.image:not(.dimensions-specified).loading-failed::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1686208295#xmark-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1686217768#xmark-regular');
     background-position: center;
     box-sizing: border-box;
     margin: 8px;
@@ -5981,14 +5981,14 @@ body.lorem div[class^='drop-cap'] {
 /*  Loading spinner (for object popins).
  */
 .popin.loading::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686208295#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1686217768#circle-notch-light');
     animation: fa-spin 2s infinite linear;
 }
 
 /*  Rendering spinner.
  */
 .popin.rendering::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686208295#spinner-third-light');
+    background-image: url('/static/img/icon/icons.svg?v=1686217768#spinner-third-light');
     animation: fa-spin 3s infinite linear;
 }
 
@@ -6869,7 +6869,7 @@ a.spawns-popin.popin-open:not(.footnote-ref) {
 
 #image-focus-overlay .help-overlay::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1686208295#question');
+    background-image: url('/static/img/icon/icons.svg?v=1686217768#question');
     background-origin: content-box;
     background-clip: content-box;
     position: absolute;
@@ -7375,7 +7375,7 @@ a.include-loading-failed:empty {
 }
 
 a.include-loading.include-spinner {
-    --spinner-image: url('/static/img/icon/icons.svg?v=1686208295#circle-notch-solid');
+    --spinner-image: url('/static/img/icon/icons.svg?v=1686217768#circle-notch-solid');
 
     pointer-events: none;
 }
